--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ env:
     - OMP_NUM_THREADS=2
     - OPENMC_CROSS_SECTIONS=$HOME/nndc_hdf5/cross_sections.xml
     - OPENMC_ENDF_DATA=$HOME/endf-b-vii.1
-    - OPENMC_MULTIPOLE_LIBRARY=$HOME/WMP_Library/WMP_Library
+    - OPENMC_MULTIPOLE_LIBRARY=$HOME/WMP_Library
     - PATH=$PATH:$HOME/NJOY2016/build
     - DISPLAY=:99.0
   matrix:
