--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ env:
     - OMP=y MPI=n PHDF5=n
     - OMP=n MPI=y PHDF5=n
     - OMP=n MPI=y PHDF5=y
-    - OMP=n MPI=y PHDF5=y CAD=y    
+    - OMP=n MPI=y PHDF5=y DAGMC=y    
 notifications:
   webhooks: https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN
 before_install:
