--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ addons:
       - libmpich-dev
       - libhdf5-serial-dev
       - libhdf5-mpich-dev
+      - libblas-dev
+      - liblapack-dev
 cache:
   directories:
   - $HOME/nndc_hdf5
@@ -38,8 +40,6 @@ env:
     - OMP=n MPI=y PHDF5=y DAGMC=y    
 notifications:
   webhooks: https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN
-before_install:
-  - sudo apt-get install libhdf5-serial-dev libhdf5-mpich-dev libblas-dev liblapack-dev -y
 install:
   - ./tools/ci/travis-install.sh
 before_script:
