--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ env:
     - OPENMC_CROSS_SECTIONS=$HOME/nndc_hdf5/cross_sections.xml
     - OPENMC_ENDF_DATA=$HOME/endf-b-vii.1
     - OPENMC_MULTIPOLE_LIBRARY=$HOME/WMP_Library
+    - LD_LIBRARY_PATH=$HOME/MOAB/lib:$HOME/DAGMC/lib
     - PATH=$PATH:$HOME/NJOY2016/build
     - DISPLAY=:99.0
     - COVERALLS_PARALLEL=true
