Adding changes requested in PR.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -488,7 +488,7 @@ endif()
 # target_link_libraries treats any arguments starting with - but not -l as
 # linker flags. Thus, we can pass both linker flags and libraries together.
 target_link_libraries(libopenmc ${ldflags} ${HDF5_LIBRARIES} pugixml
-  faddeeva xtensor ${DAGMC_LIBRARIES})
+                      faddeeva xtensor)
 
 if(dagmc)
   target_compile_definitions(libopenmc PRIVATE DAGMC)
