--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ env:
     - OMP=y MPI=n PHDF5=n
     - OMP=n MPI=y PHDF5=n
     - OMP=n MPI=y PHDF5=y
-    - OMP=n MPI=y PHDF5=y DAGMC=y    
+    - OMP=n MPI=y PHDF5=y DAGMC=y
+    - OMP=y MPI=y PHDF5=y DAGMC=y        
 notifications:
   webhooks: https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN
 install:
