Move most EnergyFilter functionality to C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -438,6 +438,7 @@ add_library(libopenmc SHARED
   src/tallies/filter_cell.cpp
   src/tallies/filter_distribcell.cpp
   src/tallies/filter_energyfunc.cpp
+  src/tallies/filter_energy.cpp
   src/tallies/filter_legendre.cpp
   src/tallies/filter_material.cpp
   src/tallies/filter_mesh.cpp
