Don't use -ftrapuv for Intel compiler
Using -ftrapuv causes global variables that are bind(C) to be defined even if
they are already defined on the C/C++ side. This causes multiple definition
errors at link time, thus preventing OpenMC from compiling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,7 @@ elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
   # Intel compiler options
   list(APPEND f90flags -fpp -std08 -assume byterecl -traceback)
   if(debug)
-    list(APPEND f90flags -g -warn -ftrapuv -fp-stack-check
+    list(APPEND f90flags -g -warn -fp-stack-check
       "-check all" -fpe0 -O0)
     list(APPEND ldflags -g)
   endif()
