--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -370,6 +370,7 @@ add_library(libopenmc SHARED
   src/tallies/trigger.F90
   src/tallies/trigger_header.F90
   src/bank.cpp
+  src/bremsstrahlung.cpp
   src/dagmc.cpp
   src/cell.cpp
   src/cmfd_solver.cpp
