--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 sudo: required
 dist: xenial
 language: python
-python:
-  - "3.5"
-  - "3.6"
-  - "3.7"
 addons:
   apt:
     packages:
@@ -34,13 +30,22 @@ env:
     - LD_LIBRARY_PATH=$HOME/MOAB/lib:$HOME/DAGMC/lib
     - PATH=$PATH:$HOME/NJOY2016/build
     - COVERALLS_PARALLEL=true
-  matrix:
-    - OMP=n MPI=n PHDF5=n
-    - OMP=y MPI=n PHDF5=n
-    - OMP=n MPI=y PHDF5=n
-    - OMP=n MPI=y PHDF5=y
-    - OMP=n MPI=y PHDF5=y DAGMC=y
-    - OMP=y MPI=y PHDF5=y DAGMC=y
+matrix:
+  include:
+    - python: "3.5"
+      env: OMP=n MPI=n PHDF5=n
+    - python: "3.6"
+      env: OMP=n MPI=n PHDF5=n
+    - python: "3.7"
+      env: OMP=n MPI=n PHDF5=n
+    - python: "3.7"
+      env: OMP=y MPI=n PHDF5=n
+    - python: "3.7"
+      env: OMP=n MPI=y PHDF5=n
+    - python: "3.7"
+      env: OMP=n MPI=y PHDF5=y
+    - python: "3.7"
+      env: OMP=y MPI=y PHDF5=y DAGMC=y
 notifications:
   webhooks: https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN
 install:
